<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        netguard:actionViewClass="androidx.appcompat.widget.SearchView"
        netguard:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu_filter"
        netguard:showAsAction="always|collapseActionView">
        <menu>
            <item
                android:id="@+id/menu_app_user"
                android:checkable="true"
                android:title="@string/menu_app_user"/>
            <item
                android:id="@+id/menu_app_system"
                android:checkable="true"
                android:title="@string/menu_app_system"/>
            <item
                android:id="@+id/menu_app_nointernet"
                android:checkable="true"
                android:title="@string/menu_app_nointernet"/>
            <item
                android:id="@+id/menu_app_unprotected"
                android:checkable="true"
                android:title="@string/menu_app_unprotected"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/menu_sort"
        netguard:showAsAction="always|collapseActionView">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_trackers_week"
                    android:title="@string/menu_sort_companies_week"/>
                <item
                    android:id="@+id/menu_sort_trackers_all"
                    android:title="@string/menu_sort_companies"/>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/menu_sort_name"/>
                <item
                    android:visible="false"
                    android:id="@+id/menu_sort_uid"
                    android:title="@string/menu_sort_uid"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_lockdown"
        android:checkable="true"
        android:visible="false"
        android:title="@string/setting_lockdown"/>
    <item
        android:id="@+id/menu_log"
        android:title="@string/menu_log"/>
    <item
        android:id="@+id/menu_insights"
        android:title="@string/menu_insights"/>
    <item

        android:id="@+id/menu_settings"
        android:visible="true"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_invite"
        android:visible="false"
        android:title="@string/menu_invite"/>
    <item
        android:id="@+id/menu_legend"
        android:title="@string/menu_legend"
        android:visible="false"/>
    <item
        android:id="@+id/menu_csv"
        android:title="@string/menu_csv"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_support"
        android:title="@string/menu_support" />
    <item
        android:id="@+id/menu_apps"
        android:title="@string/menu_apps"
        android:visible="false" />
</menu>
