<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="category_options"
        android:title="@string/setting_options">
        <ListPreference
            android:defaultValue="minimal"
            android:entries="@array/blockingModeNames"
            android:entryValues="@array/blockingModeValues"
            android:key="blocking_mode"
            android:summary="@string/summary_blocking_mode_minimal"
            android:title="@string/setting_blocking_mode" />
        <eu.faircode.netguard.SwitchPreference
            android:defaultValue="false"
            android:key="log_logcat"
            android:title="@string/setting_log_logcat"
            android:summary="@string/summary_log_logcat" />
        <eu.faircode.netguard.SwitchPreference
            android:defaultValue="false"
            android:key="disable_on_call"
            android:summary="@string/summary_call"
            android:title="@string/setting_call" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_backup"
        android:title="@string/setting_backup">
        <Preference
            android:key="export"
            android:title="@string/setting_export" />
        <Preference
            android:key="import"
            android:title="@string/setting_import" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_further_options">

    <PreferenceScreen
        android:key="screen_advanced_options"
        android:title="@string/setting_advanced_options">
        <PreferenceCategory
            android:key="category_advanced_options"
            android:title="@string/setting_advanced_options">
            <EditTextPreference
                android:defaultValue="10"
                android:inputType="number"
                android:key="pause"
                android:summary="@string/summary_pause" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:key="update_check"
                android:summary="@string/summary_update"
                android:title="@string/setting_update" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="subnet"
                android:summary="@string/summary_subnet"
                android:title="@string/setting_subnet" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="subnet"
                android:key="tethering"
                android:summary="@string/summary_tethering"
                android:title="@string/setting_tethering" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="subnet"
                android:key="lan"
                android:summary="@string/summary_lan"
                android:title="@string/setting_lan" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="reload_onconnectivity"
                android:title="@string/setting_reload_onconnectivity" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="doh_enabled"
                android:summary="@string/summary_doh_enabled"
                android:title="@string/setting_doh_enabled" />
            <EditTextPreference
                android:defaultValue="https://dns.quad9.net/dns-query"
                android:dependency="doh_enabled"
                android:hint="https://dns.quad9.net/dns-query"
                android:inputType="textUri"
                android:key="doh_endpoint"
                android:summary="@string/summary_doh_endpoint"
                android:title="@string/setting_doh_endpoint" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="doh_enabled"
                android:key="doh_dns_fallback"
                android:summary="@string/summary_doh_dns_fallback"
                android:title="@string/setting_doh_dns_fallback" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:key="block_dot"
                android:summary="@string/summary_block_dot"
                android:title="@string/setting_block_dot" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="domain_based_blocking"
                android:summary="@string/summary_domain_based_blocking"
                android:title="@string/setting_domain_based_blocked" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="include_system_vpn"
                android:summary="@string/summary_include_system_vpn"
                android:title="@string/setting_include_system_vpn" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="include_system_vpn"
                android:key="manage_system"
                android:summary="@string/summary_system"
                android:title="@string/setting_system" />
            <Preference
                android:key="manage_blocklists"
                android:summary="@string/summary_manage_blocklists"
                android:title="@string/title_blocklists" />
            <Preference
                android:key="hosts_download"
                android:title="@string/setting_hosts_update" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:key="hosts_auto_update"
                android:summary="@string/summary_hosts_auto_update"
                android:title="@string/setting_hosts_auto_update" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="filter"
                android:key="use_hosts"
                android:summary="@string/summary_block_domains"
                android:title="@string/setting_block_domains" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="number"
                android:key="rcode"
                android:summary="@string/summary_rcode" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:key="log_app"
                android:summary="@string/summary_log_app"
                android:title="@string/setting_log_app" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:key="filter"
                android:title="@string/setting_filter" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:dependency="filter"
                android:key="filter_udp"
                android:title="@string/setting_filter_udp" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="filter"
                android:key="handover"
                android:title="@string/setting_handover" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:enabled="false"
                android:dependency="filter"
                android:key="track_usage"
                android:summary="@string/summary_track_usage"
                android:title="@string/setting_track_usage" />
            <Preference
                android:enabled="false"
                android:key="reset_usage"
                android:title="@string/setting_reset_usage" />
            <Preference
                android:dependency="filter"
                android:key="forwarding"
                android:title="@string/setting_forwarding" />
            <EditTextPreference
                inputType="phone"
                android:hint="10.1.10.1"
                android:inputType="phone"
                android:key="vpn4" />
            <EditTextPreference
                android:hint="fd00:1:fd00:1:fd00:1:fd00:1"
                android:inputType="text"
                android:key="vpn6" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="text"
                android:key="dns" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="text"
                android:key="dns2" />
            <EditTextPreference
                android:hint="www.f-droid.org"
                android:inputType="text"
                android:key="validate"
                android:summary="@string/summary_validate" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="number"
                android:key="ttl" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="false"
                android:dependency="filter"
                android:key="socks5_enabled"
                android:summary="@string/summary_socks5_enabled"
                android:title="@string/setting_socks5_enabled" />
            <EditTextPreference
                android:dependency="filter"
                android:hint="127.0.0.1"
                android:inputType="text"
                android:key="socks5_addr" />
            <EditTextPreference
                android:dependency="filter"
                android:hint="1080"
                android:inputType="number"
                android:key="socks5_port" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="text"
                android:key="socks5_username" />
            <EditTextPreference
                android:dependency="filter"
                android:inputType="textPassword"
                android:key="socks5_password" />
            <EditTextPreference
                android:defaultValue="64"
                android:inputType="number"
                android:key="pcap_record_size" />
            <EditTextPreference
                android:defaultValue="2"
                android:inputType="number"
                android:key="pcap_file_size" />
            <EditTextPreference
                android:defaultValue="0"
                android:inputType="number"
                android:key="watchdog"
                android:summary="@string/summary_watchdog" />
            <Preference
                android:key="show_resolved"
                android:title="@string/setting_show_resolved" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_development"
        android:title="Development">
        <PreferenceCategory
            android:key="category_development"
            android:title="Development">
            <ListPreference
                android:defaultValue="6"
                android:entries="@array/logLevelNames"
                android:entryValues="@array/logLevelValues"
                android:key="loglevel"
                android:summary="Log level verbose, debug and info will impact performance and battery usage"
                android:title="Native log level" />
            <eu.faircode.netguard.SwitchPreference
                android:defaultValue="true"
                android:key="ip6"
                android:summary="@string/summary_ip6"
                android:title="@string/setting_ip6" />
        </PreferenceCategory>
    </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>
